[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "GowerKNN"
authors = [{name = "Noah Baker", email = "noah.baker@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dynamic = ["version", "description"]

dependencies = [
    "numpy>=1.17.0",
    "pandas>=1.0.0",
    "scikit-learn>=0.24.0"
]

requires-python = ">=3.8"

[project.urls]
Home = "https://github.com/noahrbaker/GowerKNN"

# Tools for testing or plotting are optional extras, not runtime requirements.
[project.optional-dependencies]
test = ["pytest"]